# aerial_interaction

./: LICENSE  README.md
aerial_handover/: CMakeLists.txt  README.md  package.xml
aerial_handover/launch/: task.launch
aerial_handover/scripts/: mocap_convert.py
aerial_handover/urdf/: eye_camera.urdf.xacro  hand.urdf.xacro
aerial_handover/urdf/mesh/: hand.dae
